# qtm447-aimo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-colab.txt  requirements.txt
configs/: sft_35b_moe.yaml  sft_7b.yaml  sft_7b_t4.yaml  sft_7b_v2.yaml
data/: prepare.py  prepare_aime.py
experiments/: README.md  round_1.md  round_2.md
inference/: kaggle_submission.py
results/: baseline_aime.json  baseline_aime_errors.json  baseline_aime_errors.json.jsonl  baseline_v2.json  d1_inspection.json  paper.tex  refs.bib  round_1_reflection.md  round_2_plan.md  sft_aime.json  sft_aime_errors_2.json  sft_aime_errors_2.json.jsonl  sft_round1_v2.json  sft_v2_aime_errors.json  sft_v2_aime_errors.json.jsonl  sft_v2_val200_errors.json  sft_v2_val200_errors.json.jsonl  tables.tex
scripts/: colab_setup.sh  download_data.py
src/: analyze_errors.py  dataset.py  evaluate.py  inspect_generations.py  make_plots.py  model.py  tool_use.py  train.py
