[project]
name = "qtm447-aimo"
version = "0.1.0"
description = "QTM 447 final project: LoRA fine-tuning of Qwen2.5-Math-7B-Instruct on filtered NuminaMath olympiad problems."
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sympy>=1.14.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "trl>=1.0.0",
    "wandb>=0.25.1",
]
